--- a/Workbook_Word_Meaning_and_Word2vec.ipynb
+++ b/Workbook_Word_Meaning_and_Word2vec.ipynb
@@ -54,11 +54,11 @@
       "metadata": {
         "id": "F2K8ruAnolV6",
         "colab_type": "code",
+        "outputId": "ea1d7a1b-a6aa-4645-f34e-36c35bf0ec6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
-        },
-        "outputId": "a8081bce-a6c9-4893-e15c-2729373236ac"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -96,8 +96,8 @@
           "text": [
             "Collecting torch==0.4.0 from http://download.pytorch.org/whl/cu80/torch-0.4.0-cp36-cp36m-linux_x86_64.whl\n",
             "\u001b[?25l  Downloading http://download.pytorch.org/whl/cu80/torch-0.4.0-cp36-cp36m-linux_x86_64.whl (484.0MB)\n",
-            "\u001b[K    100% |████████████████████████████████| 484.0MB 32.1MB/s \n",
-            "tcmalloc: large alloc 1073750016 bytes == 0x5c4a2000 @  0x7f356ff982a4 0x591a07 0x5b5d56 0x502e9a 0x506859 0x502209 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x507641 0x502209 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x507641 0x504c28 0x502540 0x502f3d 0x507641\n",
+            "\u001b[K    100% |████████████████████████████████| 484.0MB 51.1MB/s \n",
+            "tcmalloc: large alloc 1073750016 bytes == 0x5b1d2000 @  0x7f55949802a4 0x591a07 0x5b5d56 0x502e9a 0x506859 0x502209 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x507641 0x502209 0x502f3d 0x506859 0x504c28 0x502540 0x502f3d 0x507641 0x504c28 0x502540 0x502f3d 0x507641\n",
             "\u001b[?25hInstalling collected packages: torch\n",
             "Successfully installed torch-0.4.0\n"
           ],
@@ -140,11 +140,11 @@
       "metadata": {
         "id": "n-zCk81JRQsf",
         "colab_type": "code",
+        "outputId": "9a163ed6-3771-449d-9559-8286f91fefae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "07cb5563-dd49-4658-b44b-d8eeedb2d998"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -231,11 +231,11 @@
       "metadata": {
         "id": "461he40Z0QiC",
         "colab_type": "code",
+        "outputId": "ff4b36e9-8a7c-41e2-9a0d-115bc1603403",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "06ab77d1-b208-472c-c7e0-01c580621038"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -300,11 +300,11 @@
       "metadata": {
         "id": "RMmMc52GW1Or",
         "colab_type": "code",
+        "outputId": "cf436558-85ef-44e5-92a7-08852966d8db",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        },
-        "outputId": "385ef053-7a19-41db-9080-2fbc03bfed42"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -355,7 +355,7 @@
         "en_wiki_unked = en_wiki_vocab.sentences\n",
         "sst_unked = sst_vocab.sentences"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,11 +376,11 @@
       "metadata": {
         "id": "r_uBi2eR0rJq",
         "colab_type": "code",
+        "outputId": "f090e9b0-4173-4db0-bb87-d5a99fa72bc1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        },
-        "outputId": "f5b9f444-4e11-475d-c8a2-50713e76bdfe"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -394,7 +394,7 @@
         "print(list(sst_vocab.index_to_word[i] for i in range(10)))\n",
         "print(sst_unked[0][:10])"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,11 +482,11 @@
       "metadata": {
         "id": "In8nLIpm2tEu",
         "colab_type": "code",
+        "outputId": "6aa958dd-666a-4358-89bb-6b13103537ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "4894fa8a-bb67-42b7-b548-7ad1e4b77e82"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -496,7 +496,7 @@
         "print('\\nSST vocabulary with dropped words')\n",
         "print(sst_dropped[0][:10])"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,8 +562,11 @@
       "cell_type": "code",
       "source": [
         "def numericalize(sentence, vocabulary):\n",
-        "  # TODO: Implement\n",
-        "  pass"
+        "  numericalized = []\n",
+        "  for s in sentence:\n",
+        "    if s in vocabulary.word_to_index.keys():\n",
+        "      numericalized.append(vocabulary.word_to_index[s])\n",
+        "  return numericalized"
       ],
       "execution_count": 0,
       "outputs": []
@@ -586,15 +589,28 @@
       "metadata": {
         "id": "Tt74HJIfOF6d",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "17a524e4-b2e8-4e81-d31b-c1a9fabb031d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
       },
       "cell_type": "code",
       "source": [
         "print(en_wiki_numericalized[0][:10])\n",
         "print(sst_numericalized[0][:10])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[5234, 3084, 195, 3134, 59, 742, 10620, 27498, 855, 15178]\n",
+            "[1647, 513, 658, 2117]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -686,26 +702,27 @@
         "  while True:\n",
         "    # TODO: select a random sentence index using random.randint and get that\n",
         "    # sentence. Be careful to avoid indexing errors.\n",
-        "    sentence_idx = \n",
-        "    sentence = \n",
+        "    sentence_idx = random.randint(0, len(numericalized_sentences)-1)\n",
+        "    sentence = vocabulary.sentences[sentence_idx]\n",
         "    # TODO: Select a random window index using random.randint\n",
         "    # and obtain that window of size n. Be careful to avoid indexing errors.\n",
-        "    window_idx = \n",
-        "    window = \n",
+        "    window_idx = random.randint(0, len(sentence)-1)\n",
+        "    window = sentence[window_idx:n]\n",
         "    \n",
         "    if len(window) <= n//2:\n",
         "      continue\n",
         "      \n",
         "    # TODO: Get the center word and the context words \n",
-        "    center_word = \n",
-        "    context_words = \n",
+        "    center_word = window[len(window)//2]\n",
+        "    context_words = window\n",
+        "    context_words.remove(center_word)\n",
         "    \n",
         "    # TODO: Create examples using the guidelines above\n",
         "    if sg: # if Skip-Gram\n",
         "      context_word = context_words[random.randint(0, len(context_words)-1)]\n",
-        "      example = \n",
+        "      example = [center_word, context_word]\n",
         "    else: # if CBOW\n",
-        "      example = \n",
+        "      example = [context_words, center_word]\n",
         "      if len(window) < n:\n",
         "        continue\n",
         "      \n",
@@ -727,7 +744,11 @@
       "metadata": {
         "id": "YX8Zpv4PeOnu",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "10a5f017-7231-4692-8a68-ddd119f0f3dd"
       },
       "cell_type": "code",
       "source": [
@@ -743,7 +764,15 @@
         "en_wiki_5cbow15ns_examples = construct_examples(en_wiki_numericalized, en_wiki_vocab, sg=False, k=15)"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Constructing English Wikipedia examples for 5SG-FS model\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
